@@ -190,3 +190,8 @@
 - multicall in forpart/forcomp.
 
 - check memory use for non-multicall.  We need enter/leave which were removed.
+
+- consider the various *mod, two arg or 0 for last arg means no mod.
+  we could use this for e.g. numseqs.pl powerflip to do powmod.
+
+- Add aliquot sum
